--- a/profile/themes/smc_base/scss/elements/dept-menu.scss
+++ b/profile/themes/smc_base/scss/elements/dept-menu.scss
@@ -11,6 +11,7 @@
   	background-color: $primaryBlue;
   	padding: 1em;
   	display: none;
+  	width: 100%;
   	
   	.close {
   		position: absolute; 
@@ -18,7 +19,7 @@
   		right: 3%; 
   		color: white; 
   		font-size: 1.5em;
-  		}
+    }
   	
   	.close:hover {color: rgba(#fff, .5)}
   	
@@ -34,7 +35,14 @@
   		margin-bottom: 0;
   		padding-left: 0;
   		
-  		li {
+  		li,
+  		li.leaf,
+  		li.collapsed {
+  		  margin: 0;
+  		  padding: 0;
+  		  list-style-type: none;
+  		  list-style-image: none;
+  		  
   			a {
   				color: white;
   				font-weight: bold;
